platform/k8s/base/core/nats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: argos-core
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/part-of: argos
spec:
  selector:
    app.kubernetes.io/name: nats
  ports:
    - name: client
      port: 4222
      targetPort: client
